Update the activity_article_detail layout

--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -1,15 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".activities.ArticleDetailActivity">
+    <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
     <WebView
             android:id="@+id/article_detail_webview"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
     </WebView>
+    <ProgressBar
+            android:id="@+id/page_progress_bar"
+            android:layout_width="56dp"
+            android:layout_height="56dp"/>
 
-</FrameLayout>
+</LinearLayout>
