--- a/app/src/main/res/layout/article_list_item.xml
+++ b/app/src/main/res/layout/article_list_item.xml
@@ -2,16 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
     <ImageView
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:id="@+id/result_icon"
+            android:src="@drawable/baseline_image_black_24"
             android:layout_margin="16dp"
             android:layout_gravity="center"/>
     <TextView
             android:id="@+id/result_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Testing..."
             android:layout_gravity="center_vertical"/>
 </LinearLayout>
