Fix toolbar title and minor fixes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
+                android:theme="@style/AppToolbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
