--- a/app/src/main/res/menu/article_menu.xml
+++ b/app/src/main/res/menu/article_menu.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/action_favorite"
+          android:icon="@drawable/baseline_favorite_white_24"
+          app:showAsAction="always"
+          android:title="Favorite"/>
 </menu>
