--- a/app/src/main/res/menu/history_menu.xml
+++ b/app/src/main/res/menu/history_menu.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+            android:id="@+id/action_clear_history"
+            android:title="Clear"
+            android:icon="@drawable/baseline_delete_outline_black_24"
+            app:showAsAction="always"/>
 </menu>
