Created Share in Article Detail Activity

--- a/app/src/main/res/menu/article_menu.xml
+++ b/app/src/main/res/menu/article_menu.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/action_favorite"
-          android:icon="@drawable/baseline_favorite_white_24"
-          app:showAsAction="always"
-          android:title="Favorite"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+            android:id="@+id/action_share"
+            android:icon="@drawable/baseline_share_24dp"
+            android:title="Share"
+            app:showAsAction="always" />
+
+    <item
+            android:id="@+id/action_favorite"
+            android:icon="@drawable/baseline_favorite_white_24"
+            android:title="Favorite"
+            app:showAsAction="always" />
+
 </menu>
