--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                     xmlns:tools="http://schemas.android.com/tools"
-                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                     android:layout_width="match_parent"
-                                                     android:layout_height="match_parent"
-                                                     tools:context=".fragments.ExploreFragment">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".fragments.ExploreFragment">
+
     <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="92dp">
+
         <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsing_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:toolbarId="@id/toolbar"
+                app:contentScrim="@color/colorPrimary"
                 app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
-                app:contentScrim="@color/colorPrimary">
+                app:toolbarId="@id/toolbar">
+
             <androidx.cardview.widget.CardView
                     android:id="@+id/search_card_view"
                     android:layout_width="match_parent"
@@ -23,46 +26,53 @@
                     android:layout_margin="16dp"
                     app:cardElevation="6dp"
                     app:layout_collapseMode="parallax">
+
                 <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="48dp">
+
                     <ImageView
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:layout_gravity="center_vertical"
                             android:layout_margin="8dp"
-                            android:tint="@android:color/darker_gray"
-                            android:src="@drawable/ic_search_black_24dp"/>
+                            android:src="@drawable/ic_search_black_24dp"
+                            android:tint="@android:color/darker_gray" />
+
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="16sp"
+                            android:layout_gravity="center_vertical"
+                            android:gravity="center_vertical"
                             android:text="Search Wikipedia"
-                            android:layout_gravity="center_vertical" android:gravity="center_vertical"/>
+                            android:textSize="16sp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/refresher"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+
+
         <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/explore_article_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-        </androidx.recyclerview.widget.RecyclerView>
+                android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
     <TextView
             android:id="@+id/noConnectionTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="invisible"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:text="No connection. ¯\\_(ツ)_/¯"
             android:textColor="@android:color/holo_orange_dark"
             android:textSize="24sp"
-            android:layout_gravity="center"
-            android:gravity="center"/>
+            android:visibility="invisible" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
